# manifest

./: .eslintrc  .gitignore  Cargo.toml  Certora_README.md  LICENSE  README.md  codecov.yml  local-validator-test.sh  manifest-keypair.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
.circleci/: config.yml
.github/workflows/: ci-autogen.yml  ci-balance-checker.yml  ci-benchmark.yml  ci-certora.yml  ci-code-review-debug-ui.yml  ci-code-review-rust.yml  ci-code-review-ts.yml  ci-docs.yml  ci-publish.yml  ci-static.yml  ci-trade-verification.yml  ci-verifiable-build.yml
audits/: updates.md
certora/: cvt_inlining.txt  cvt_summaries.txt
client/idl/: generateClient.js  generateIdl.js  manifest.json  package-lock.json  package.json  ui_wrapper.json  wrapper.json
client/okx/: Cargo.toml  README.md
client/okx/src/: lib.rs  mfx.rs
client/rust/: Cargo.toml  README.md
client/rust/src/: lib.rs
client/ts/: README.md
compliance/: README.md
debug-ui/: .env  .env.example  .env.local  .eslintignore  README.md  next.config.mjs  package.json  tsconfig.json  webpack.config.js
debug-ui/.next/: trace
debug-ui/app/: layout.tsx  page.tsx
debug-ui/docs/: Liquidity-API.md  Snapshots-API.md  Stats-API.md
debug-ui/lib/: address-labels.ts  data.ts  error.ts  format.ts  killswitch.ts  spl.ts  types.ts  util.ts  withAccessControl.tsx
docs/: WALLET_INTEGRATION.md  index.html
landing/: Dockerfile  README.md  fly.toml  package.json  tailwind.config.ts  tsconfig.json
lib/: Cargo.toml  README.md
lib/src/: free_list.rs  hypertree.rs  lib.rs  llrb.rs  red_black_tree.rs  tree.rs  utils.rs
manifest-test/: manifest-test.ts  manifest.json  package-lock.json  package.json
programs/: README.md
programs/manifest/: Cargo.toml  justfile  rules-rb-tree.json  rules.json  verify-manifest  verify-manifest.py
programs/manifest/src/: lib.rs  logs.rs  quantities.rs  quantities_certora.rs  utils.rs
programs/manifest/src/certora/: hooks.rs  log.rs  mocks_batch_update.rs  mod.rs  utils.rs
programs/manifest/src/certora/confs/: base.conf  hypertree.conf  justfile  rules.conf
programs/manifest/src/certora/just/: build.just  certoraCertora.just  certoraDevVerify.just  certoraSolanaProver.just  package-justfile.template
programs/manifest/src/certora/spec/: batch_update_checks.rs  cancel_order_checks.rs  deposit_checks.rs  funds_checks.rs  market_checks.rs  matching_checks.rs  mod.rs  no_funds_loss_util.rs  place_order_checks.rs  rbtree_checks.rs  swap_checks.rs  withdraw_checks.rs
programs/manifest/src/certora/summaries/: impact_base_atoms.rs  mod.rs  place_order.rs
programs/manifest/src/program/: error.rs  instruction.rs  mod.rs
programs/manifest/src/program/instruction_builders/: batch_update_instruction.rs  claim_seat_instruction.rs  create_market_instructions.rs  deposit_instruction.rs  expand_instruction.rs  expand_market_instruction.rs  global_add_trader_instruction.rs  global_claim_seat_instruction.rs  global_clean_instruction.rs  global_create_instruction.rs  global_deposit_instruction.rs  global_evict_instruction.rs  global_withdraw_instruction.rs  mod.rs  swap_instruction.rs  swap_v2_instruction.rs  withdraw_instruction.rs
programs/manifest/src/program/processor/: batch_update.rs  claim_seat.rs  commit_and_undelegate.rs  commit_and_undelegate_market.rs  commit_market.rs  create_market.rs  delegate_market.rs  deposit.rs  expand.rs  expand_market.rs  global_add_trader.rs  global_claim_seat.rs  global_clean.rs  global_create.rs  global_deposit.rs  global_evict.rs  global_withdraw.rs  mod.rs  shared.rs  swap.rs  undelegate_market.rs  withdraw.rs
programs/manifest/src/state/: claimed_seat.rs  constants.rs  cvt_db_mock.rs  cvt_munge.rs  global.rs  market.rs  market_helpers.rs  mod.rs  resting_order.rs  utils.rs
programs/manifest/src/validation/: loaders.rs  manifest_checker.rs  mod.rs  solana_checkers.rs  token_checkers.rs
programs/manifest/tests/cases/: batch_update.rs  cancel_order.rs  claim_seat.rs  create_market.rs  delegate_market.rs  deposit.rs  global.rs  loaders.rs  matching.rs  mod.rs  place_order.rs  reverse.rs  swap.rs  token22.rs  withdraw.rs  withdraw_with_fetched_accounts.rs
programs/manifest/tests/program_test/: fixtures.rs
programs/manifest/tests/testdata/: 8sjV1AqBFvFuADBCQHhotaRq5DFFYSjjg1jMyVWMqXvZ  AKjfJDv4ywdpCDrj7AURuNkGA3696GTVFgrMwk4TjkKs  CNRQ2Q5YURFcQrATzYeKUWgKUoBDfqzkDrRWf21UXCVo  ENhU8LsaR7vDD2G1CsWcsuSGNrih9Cv5WZEk7q9kPapQ  FGQoLafigpyVb7mLa6pvsDDpDaEE3JetrzQoAggTo3n7  FN9K6rTdWtRDUPmLTN2FnGvLZpHVNRN2MeRghKknSGDs
programs/test-fixtures/: Cargo.toml
programs/test-fixtures/src/: lib.rs  sender.rs
programs/ui-wrapper/: Cargo.toml
programs/ui-wrapper/src/: error.rs  instruction.rs  lib.rs  logs.rs  market_info.rs  open_order.rs  wrapper_state.rs  wrapper_user.rs
programs/ui-wrapper/src/instruction_builders/: batch_update_instruction.rs  claim_seat_instruction.rs  create_wrapper_instruction.rs  mod.rs
programs/ui-wrapper/src/processors/: cancel_order.rs  claim_seat.rs  create_wrapper.rs  edit_order.rs  mod.rs  place_order.rs  settle_funds.rs  shared.rs
programs/ui-wrapper/tests/: mod.rs
programs/ui-wrapper/tests/cases/: batch_update.rs  edit_order.rs  mod.rs  place_order.rs
programs/ui-wrapper/tests/program_test/: fixtures.rs  mod.rs
programs/wrapper/: Cargo.toml
programs/wrapper/src/: instruction.rs  lib.rs  loader.rs  market_info.rs  open_order.rs  wrapper_state.rs
programs/wrapper/src/instruction_builders/: batch_update_instruction.rs  claim_seat_instruction.rs  create_wrapper_instruction.rs  deposit_instruction.rs  global_add_trader_instrutions.rs  mod.rs  withdraw_instruction.rs
programs/wrapper/src/processors/: batch_upate.rs  claim_seat.rs  collect.rs  create_wrapper.rs  deposit.rs  global_add_trader.rs  mod.rs  shared.rs  withdraw.rs
programs/wrapper/tests/cases/: batch_update.rs  claim_seat.rs  deposit.rs  global_add_trader.rs  mod.rs  withdraw.rs
programs/wrapper/tests/program_test/: fixtures.rs
rs/: .rustc_info.json
(+1266 files in other folders)
