[workspace]
resolver = "2"
members = [
  "lib",
  "client/rust",
  "client/okx",
  "programs/manifest",
  "programs/wrapper",
  "programs/ui-wrapper",
]

[workspace.dependencies]
shank = "0.4.2"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = [ "no-entrypoint" ] }
solana-program = "2.2"
borsh = "=0.10"
bytemuck = "1.7.2"
num_enum = "=0.5.11"
thiserror = "1.0.38"
solana-security-txt = "1.1.0"
static_assertions = "=1.1.0"
solana-invoke = "0.2.0"

anyhow = "1.0.66"
solana-program-test = "2.2"
solana-logger = "2.2"
solana-sdk = "2.2"
tokio = "1.28.0"

nondet = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
cvt = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
early-panic = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
cvt-macros = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
calltrace = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
solana_cvt = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
hook_macro = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
vectors = { git = "https://github.com/mschneider/solana-cvt", branch = "max/solana-2.2" }
arrayref = "0.3.7"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
strip = "debuginfo"

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
strip = "debuginfo"

# Test with release settings so CU usage is accurately measured.
[profile.test]
lto = "fat"
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = true
strip = "debuginfo"
