[package]
name = "manifest-okx"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "OKX AMM interface for Manifest exchange"
license-file = "LICENSE"

[features]
test = []

[dependencies]
anyhow = { workspace = true }
manifest-dex = "2.0.0"
hypertree = "1.0.0"
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true }
solana-client = "1.18.26"
solana-account-decoder = "1.18.26"
async-trait = "0.1.88"
serde_json = "1.0.140"
log = "0.4.27"
