[package]
name = "manifest-jupiter"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "Jupiter AMM interface for Manifest exchange"
license-file = "LICENSE"

[dependencies]
anyhow = { workspace = true }
manifest = { path = "../../programs/manifest" }
hypertree = { path = "../../lib" }
jupiter-amm-interface = "0.1.1"
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true }