[package]
name = "manifest-jupiter"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "Jupiter AMM interface for Manifest exchange"
license-file = "LICENSE"

[features]
test = []

[dependencies]
anyhow = { workspace = true }
manifest-dex = "2.0.0"
hypertree = "1.0.0"
jupiter-amm-interface = "=0.4.5"
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true }