[package]
name = "ui-wrapper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Maximilian Schneider <max@mango.markets>"]
description = "UI Wrapper for Manifest"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "ui_wrapper"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
trace = [ "hypertree/fuzz", "hypertree/trace", "manifest/trace" ]
test = []

[dependencies]
manifest = { path = "../manifest", features = ["no-entrypoint"]  }
hypertree = { path = "../../lib" }
# Cannot use workspace because the generator needs to see a version here
shank = "0.4.2"
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-program = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
solana-security-txt = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
solana-program-test = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
test_fixtures = { path = "../test-fixtures" }
tokio = { workspace = true }
