[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "Wrapper for Manifest"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "wrapper"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
trace = []
test = []

[dependencies]
manifest = { path = "../manifest", features = ["no-entrypoint"]  }
hypertree = { path = "../../lib" }
# Cannot use workspace because the generator needs to see a version here
shank = "0.4.2"
spl-token = { workspace = true, features = ["no-entrypoint"] }
solana-program = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
solana-security-txt = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
solana-program-test = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
